force-app/main/default/objects/Account/fields/Account_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Account_Salesforce__c</fullName>
    <label>Account Salesforce</label>
    <length>25</length>
    <type>Text</type>
</CustomField>