force-app/main/default/objects/Account/fields/AccountExecutive__c.field-meta.xml
<CustomField>
    <fullName>AccountExecutive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Executive</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>0011v00002iEX3XAAW</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts Executive</relationshipLabel>
    <relationshipName>AccountsExecutive</relationshipName>
    <type>Lookup</type>
</CustomField>