force-app/main/default/objects/Account/fields/AccountSalesforce__c.field-meta.xml
<CustomField>
    <fullName>AccountSalesforce__c</fullName>
    <label>Account Salesforce</label>
    <length>25</length>
    <type>Text</type>
</CustomField>