force-app/main/default/objects/Account/fields/Acronimo__c.field-meta.xml
<CustomField>
    <fullName>Acronimo__c</fullName>
    <label>Acronimo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>