force-app/main/default/objects/Account/fields/AveragePaymentsDays__c.field-meta.xml
<CustomField>
    <fullName>AveragePaymentsDays__c</fullName>
    <label>Average Payments Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>