force-app/main/default/objects/Account/fields/CompanyType__c.field-meta.xml
<CustomField>
    <fullName>CompanyType__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Soc. di capitali</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Soc. di persone</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Persona fisica</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Altro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>