force-app/main/default/objects/Account/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer</label>
    <type>Checkbox</type>
</CustomField>