force-app/main/default/objects/Account/fields/DifferenceDay__c.field-meta.xml
<CustomField>
    <fullName>DifferenceDay__c</fullName>
    <label># Days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>