force-app/main/default/objects/Account/fields/ExpectedPaymentsDays__c.field-meta.xml
<CustomField>
    <fullName>ExpectedPaymentsDays__c</fullName>
    <label>Expected Payments Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>