force-app/main/default/objects/Account/fields/Fields_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Fields_Of_Interest__c</fullName>
    <label>Fields Of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FieldsOfInterest</valueSetName>
    </valueSet>
</CustomField>