force-app/main/default/objects/Account/fields/FiscalCode__c.field-meta.xml
<CustomField>
    <fullName>FiscalCode__c</fullName>
    <label>FiscalCode</label>
    <length>16</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>