force-app/main/default/objects/Account/fields/IdFattureInCloud__c.field-meta.xml
<CustomField>
    <fullName>IdFattureInCloud__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Id del cliente su Fatture in Cloud</description>
    <externalId>true</externalId>
    <label>Id Fatture In Cloud</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>