force-app/main/default/objects/Account/fields/LinksCompanyID__c.field-meta.xml
<CustomField>
    <fullName>LinksCompanyID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>LinksCompanyID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>