force-app/main/default/objects/Account/fields/NumeroInvoiceNonPagato__c.field-meta.xml
<CustomField>
    <fullName>NumeroInvoiceNonPagato__c</fullName>
    <label>Numero Invoice Non Pagato</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>