force-app/main/default/objects/Account/fields/PaymentSemaphore__c.field-meta.xml
<CustomField>
    <fullName>PaymentSemaphore__c</fullName>
    <formula>IF (DifferenceDay__c &gt;= 60, IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;red&quot;,20, 20), 
				IF( and ( DifferenceDay__c &gt;=30 , DifferenceDay__c &lt; 60), IMAGE(&quot;/img/msg_icons/warning24.png&quot;, &quot;yellow&quot;,20, 20), 
							IF( and (DifferenceDay__c &gt;= 0 , DifferenceDay__c &lt; 30), IMAGE(&quot;/img/msg_icons/confirm24.png&quot;, &quot;green&quot;,20, 20), &quot;Payment data not detected&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Semaphore</label>
    <type>Text</type>
</CustomField>