force-app/main/default/objects/Account/fields/Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>Record_Owner__c</fullName>
    <label>Record Owner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flavia Dall&apos;Ora</fullName>
            </value>
            <value>
                <fullName>Francesco Veropalumbo</fullName>
            </value>
            <value>
                <fullName>Fulvio Vanacore</fullName>
            </value>
            <value>
                <fullName>Giovanni Costagliola</fullName>
            </value>
            <value>
                <fullName>Giuseppe Maiorano</fullName>
            </value>
            <value>
                <fullName>Massimo Colombo</fullName>
            </value>
            <value>
                <fullName>Roberto De Simone</fullName>
            </value>
            <value>
                <fullName>Antonio Frigerio</fullName>
            </value>
            <value>
                <fullName>Paride Ripoldi</fullName>
                <isActive>false</isActive>
                <label>Paride Ripoldi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>