force-app/main/default/objects/Account/fields/UnpaidInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>UnpaidInvoiceNumber__c</fullName>
    <label>Unpaid Invoice Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>