force-app/main/default/objects/Account/validationRules/VAT_Number_Italy_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>VAT_Number_Italy_Account</fullName>
    <active>true</active>
    <description>Validation for italian VAT number</description>
    <errorConditionFormula>IF(NOT(ISBLANK(VATNumber__c)),
NOT(REGEX(VATNumber__c , &quot;^(IT){0,1}[0-9]{11}$&quot;)),
FALSE
)</errorConditionFormula>
    <errorDisplayField>VATNumber__c</errorDisplayField>
    <errorMessage>Value not allowed for VAT Number</errorMessage>
</ValidationRule>