force-app/main/default/objects/Account/listViews/Internal.listView-meta.xml
<ListView>
    <fullName>Internal</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Acronym__c</columns>
    <columns>ExtId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Internal</value>
    </filters>
    <label>Internal</label>
</ListView>